--- a/LifeCycle.html
+++ b/LifeCycle.html
@@ -1,14 +1,13 @@
 <html>
     <head>
-        <script src=""angular.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     </head>
 
     <body ng-app="myApp" ng-controller="myCtrl">
         {{username}}
-    </body>
 
     <script>
-        var app = anguler.module("myApp",[]);
+        var app = angular.module("myApp",[]);
         app.controller("myCtrl",function($scope, $timeout){
             $scope.username = "Vineeth";
             setTimeout(function(){
@@ -18,4 +17,5 @@
             }, 2000)
         });
     </script>
+    </body>
 </html>
